--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-
         android:orientation="vertical" >
 
         <include android:id="@+id/toolbar"
@@ -36,7 +35,7 @@
                 android:background="#DDDDDD"
                 android:id="@+id/topSection" >
 
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -46,19 +45,42 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/imgUser"
-                        android:layout_width="91dp"
-                        android:layout_height="91dp"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:src="@drawable/user"
                         app:border_color="#FF000000" />
 
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                        android:textSize="@dimen/user_name"
+                        android:text="Nombre"
+                        android:id="@+id/lblUserApellido"
+                        android:layout_marginTop="5dp"
+                        android:textColor="#363636"
+                        android:gravity="center"
+                        android:layout_below="@+id/lblUserNombre"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignLeft="@+id/lblUserNombre"
+                        android:layout_alignStart="@+id/lblUserNombre" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                        android:textSize="14dp"
                         android:text="Nombre"
                         android:id="@+id/lblUserNombre"
                         android:textColor="#363636"
-                        android:gravity="center" />
-                </LinearLayout>
+                        android:gravity="center"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/imgUser"
+                        android:layout_toEndOf="@+id/imgUser"
+                        android:layout_marginTop="14dp" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -69,13 +91,14 @@
                 android:id="@+id/middleSection"
                 android:background="#29A9D2"
                 android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="@dimen/panel_title"
                     android:text="@string/ult_nomi_header"
                     android:id="@+id/textView3"
                     android:textColor="#fff" />
@@ -84,67 +107,13 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:background="#DDDDDD">
 
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/listView"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent" android:layout_height="match_parent"
-                android:padding="16dp"
-                >
-
-                <android.support.v7.widget.CardView
+                <android.support.v7.widget.RecyclerView
+                    android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/cv"
-                    >
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/person_photo"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentTop="true"
-                            android:layout_marginRight="16dp"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/person_name"
-                            android:layout_toRightOf="@+id/person_photo"
-                            android:layout_alignParentTop="true"
-                            android:textSize="30sp"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/person_age"
-                            android:layout_toRightOf="@+id/person_photo"
-                            android:layout_below="@+id/person_name"
-                            />
-
-                    </RelativeLayout>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/cardList"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
-
-                </android.support.v7.widget.CardView>
+                    android:id="@+id/rv" />
 
             </LinearLayout>
 
